--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.11.49</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
     </dependencies>
 
 </project>
